--- a/gaddar.css
+++ b/gaddar.css
@@ -25,7 +25,7 @@ body{
   .vid{
     display: flex;
     justify-content: center;
-    margin-top: 150px;
+    margin-top: 20px;
   }
   iframe{
     border-radius: 8px;
@@ -52,11 +52,14 @@ body{
     cursor: pointer;
   }
   .sname{
-    margin-top: 20px;
-    margin-left: 20px;
+    margin-top: 50px;
+    margin-left: 270px;
     font-size: medium;
   }
   #img{
+    display: none;
+  }
+  #mobsel{
     display: none;
   }
 @media (max-width: 600px){
@@ -70,6 +73,8 @@ body{
   }
   .sname{
     font-size: 15px;
+    margin-left: 20px;
+    display: block;
   }
   .vid{
     margin-top: 10px;
@@ -81,9 +86,21 @@ body{
     width: 460px;
     height: 240px;
   }
+  select{
+    display: none;
+  }
   #img{
+    margin-left: 0px;
     width: 170px;
     height: 270px;
+    display: flex;
+    margin: 0px;
+  }
+  #mobsel{
+    display: block;
+  }
+  .mobdiv{
+    justify-content: space-between;
     display: flex;
   }
 }
