--- a/gaddar.css
+++ b/gaddar.css
@@ -100,6 +100,7 @@ body{
     display: block;
   }
   .mobdiv{
+    align-items: center;
     justify-content: space-between;
     display: flex;
   }
