--- a/style.css
+++ b/style.css
@@ -99,4 +99,19 @@ body{
     height: 260px;
     box-shadow: 7px 7px 15px white;
   }
+  
+  .section2{
+    font-size: 15px;
+    margin-left: 30px;
+  }
+    #ali{
+    width: 150px;
+    height: 250px;
+    margin-left: 15px;
+  }
+  #ali:hover{
+    width: 160px;
+    height: 260px;
+    box-shadow: 7px 7px 15px white;
+  }
 }
