--- a/style.css
+++ b/style.css
@@ -207,6 +207,20 @@ a {
   margin-top: 40px;
 }
 
+.footer .facebook-link {
+  display: inline-block;
+  margin-top: 10px;
+  color: #1877f2;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer .facebook-link:hover {
+  text-decoration: underline;
+  text-decoration: none;
+  text-shadow: 2px 2px 10px#1877f2;
+}
+
 /* Responsive */
 @media (max-width: 768px) {
   .card-grid {
