--- a/aot.css
+++ b/aot.css
@@ -32,10 +32,8 @@ html {
 
 #name h2 {
   font-family: fantasy;
-  font-size: 36px; /* Increase from default */
   color: black;
   text-shadow: 2px 2px 5px gray;
-  margin: 0;
 }
 #name,
 #name h2 {
@@ -230,6 +228,20 @@ footer a:hover {
   .episode-title {
     font-size: 22px;
   }
+}
+
+.footer .facebook-link {
+  display: inline-block;
+  margin-top: 10px;
+  color: #1877f2;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer .facebook-link:hover {
+  text-decoration: underline;
+  text-decoration: none;
+  text-shadow: 2px 2px 10px#1877f2;
 }
 
 @media (max-width: 768px) {
