--- a/deha.css
+++ b/deha.css
@@ -159,6 +159,20 @@ html, body {
   color: white;
 }
 
+.footer .facebook-link {
+  display: inline-block;
+  margin-top: 10px;
+  color: #1877f2;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.footer .facebook-link:hover {
+  text-decoration: underline;
+  text-decoration: none;
+  text-shadow: 2px 2px 10px#1877f2;
+}
+
 /* Responsive Mobile */
 @media (max-width: 768px) {
   .episode-container {
